--- a/index.html
+++ b/index.html
@@ -285,6 +285,12 @@
                     var bcolor;
 
                     switch (theme) {
+                        case "hot":
+                            bcolor = "red";
+                            break;
+                        case "cool":
+                            bcolor = "blue";
+                            break;
                         case "warm":
                             bcolor = "green";
                             break;
